# RayTracedShadows

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Scripts/: cmake-vs2015-vk.cmd  cmake-vs2017-vk.cmd  cmake-vs2019-vk.cmd  cmake-xcode-mtl.sh
Source/: BVHBuilder.cpp  BVHBuilder.h  BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  MovingAverage.h  NVRaytracing.cpp  NVRaytracing.h  NVXRaytracing.cpp  NVXRaytracing.h  RayTracedShadows.cpp  RayTracedShadows.h  VkRaytracing.cpp  VkRaytracing.h
Source/Shaders/: Blit.vert  Combine.frag  Model.frag  Model.vert  RayTracedShadows.comp  RayTracedShadows.rmiss  RayTracedShadowsInline.comp  RayTracedShadowsNV.rgen  RayTracedShadowsNVX.rgen  RayTracedShadowsNVX.rmiss
